Bug 1677854 - Bail out early in EnsureValidPremultipliedData if the text is offscreen. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D98257